test/compilable/checkimports3.d
/*
REQUIRED_ARGS: -de
*/
import imports.checkimports3a;
import imports.checkimports3b;
import imports.checkimports3c;

void test()
{
    foo();
}
